# tower-defence

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  index.html
src/: main.cpp  state.cpp  state.h
src/game/: sprite_registry.cpp  sprite_registry.h  tile_map.h
src/game/components/: bullet.h  enemy.h  money.h  sprite.h  tile.h  tile_map.h  transform.h  turret.h  velocity.h
src/game/systems/: enemy_placement_system.h  physics_system.h  positioning_system.h  shooting_system.h  sprite_renderer.h  turret_placement_system.h
src/states/: game.cpp  game.h  init.cpp  init.h  intro.cpp  intro.h
src/util/: vec2.h  vec4.h
